Fixed icon alignment issue in IE11 for  social link buttons

--- a/app/scss/3-views/user/profile.scss
+++ b/app/scss/3-views/user/profile.scss
@@ -191,6 +191,7 @@
   }
   .social-icon{
     flex:0.2;
+    max-width:15%;
   }
   .social-label{
     padding-left:1em;
